# auth-service

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_COMPLETE.md  README.md  a  alembic.ini  docker-compose.yml  instruction  pyproject.toml  rebuild.sh  test_auth_flow.sh
alembic/: env.py
alembic/versions/: 47765d95ab04_add_password_reset_and_email_.py  80d0e1921d39_initial_schema.py  91234abcde56_add_account_lockout.py  add_service_accounts.py
app/: main.py
app/api/: deps.py
app/api/v1/: admin.py  auth.py  users.py  wellknown.py
app/core/: config.py  exceptions.py  redis.py  security.py
app/db/: session.py
app/models/: __init__.py
app/schemas/: auth.py
app/services/: audit_service.py  auth_service.py  email.py  mfa_service.py  user_service.py
app/utils/: logging.py  rate_limiter.py
scripts/: create_admin_user.py  create_service_account.py  debug_jwt.py  fix_all_tests.py  test_admin_endpoints.sh  test_mfa_flow.sh  test_token_refresh.sh  test_totp_complete.sh  totp_generator.py
tests/: README_TESTING.md  conftest.py  test_admin.py  test_auth.py  test_flows.py  test_integration_full.py  test_m2m_auth.py  test_security.py
tests/integration/: test_security_fixes.py
